feat: added more details
Added a little description about me

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     Hi! I am Cindy!
+
+    I studied at The National Institute of Engineering.
+    I have worked on a few CLI apps.
+    I am looking forward to become a web developer.
 </body>
 </html>
