update: changed to full name
Changed name to full name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>cindyrodriguessite</title>
 </head>
 <body>
-    Hi! I am Cindy!
+    Hi! I am Cindy Rodrigues!
 
     I studied at The National Institute of Engineering.
     I have worked on a few CLI apps.
