update: added project details
Added details about two projects I made

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     I studied at The National Institute of Engineering.
     I have worked on a few CLI apps.
     I am looking forward to become a web developer.
+
+    I have made two CLI apps.
+    First app is a 'DO YOU KNOW ME?' quiz.
+    Second app is a 'Harry Potter Trivia' quiz.
 </body>
 </html>
