--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     I have made two CLI apps.
     First app is a 'DO YOU KNOW ME?' quiz.
     Second app is a 'Harry Potter Trivia' quiz.
+
+    My favourite book is 'A Man Called Ove'.
+    My favourite movie is 'The Intern'.
 </body>
 </html>
